samples/_failures_safe/1761265885_d10f00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1ee0a4e.c: In function ‘main’:
./samples/SAFE/__tmp_e1ee0a4e.c:165:12: error: missing terminating " character
  165 |     printf("Original: %s
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_e1ee0a4e.c:165:5: error: expected expression at end of input
  165 |     printf("Original: %s
      |     ^~~~~~
./samples/SAFE/__tmp_e1ee0a4e.c:165:5: error: expected declaration or statement at end of input
